<resources>
    <string name="app_name">PocketTopo</string>
    <string name="action_settings">Settings</string>
    <string name="nederland.xml">Nederland</string>
    <string name="InfoText">Het spel PocketTopo zal jou helpen met het leren van topografie door middel van aanwijsvragen, multiplechoicevragen of openvragen. Aanwijsvragen worden beantwoordt door middel van de juiste plekken aan te wijzen , multiplechoice vragen door de juiste meerkeuze antwoord te nemen en openvragen door middel van het juiste antwoord te typen. voor meer informatie kunt u de website bezoeken.</string>
    <string name="pref_sum_soundeffects">Zet de geluidseffecten aan/uit.</string>
    <string name="pref_title_soundeffects">Geluidseffecten</string>
    <string name="pref_sum_colorblind">Zet het kleurenschema voor kleurenblinden aan/uit.</string>
    <string name="pref_title_colorblind">Kleurenblind modus</string>
    <string name="pref_title_repeatq">Herhalen vragen</string>
    <string name="pref_sum_repeatq">Zet het herhalen van fout beantwoorde vragen aan/uit.</string>
    <string name="info1">Welkom bij PocketTopo! Deze app helpt je op een leuke en snelle manier topografie te leren. Hieronder vind je meer informatie over de verschillende onderdelen van PocketTopo.</string>
    <string name="info2">Oefen hier de topografie van Nederland. Je wordt eerst naar een scherm gebracht waar je kan kiezen wat en hoe je wil leren. Daarna begint het spel en moet je het goede antwoord geven op de vraag</string>
    <!--<string name="info3">Gebruik hier alles wat je hebt geleerd bij het oefenen om een zo hoog mogelijke score te behalen!</string>-->
    <string name="info4">Je kunt bij de instellingen o.a. het geluid en kleurenblindheidmodus aanpassen.</string>
    <string name="steden">Steden</string>
    <string name="gebergtes">Gebergtes</string>
    <string name="provincies">Provincies</string>
    <string name="wateren">Wateren</string>
    <string name="landen">Landen</string>
    <string name="selectie1">Selecteer de regio die je wilt oefenen</string>
    <string name="selectie2">Selecteer welke onderdelen je wilt oefenen</string>
    <string name="selectie3">Selecteer hoe je wilt oefenen</string>
    <string name="Regio">Regio</string>
    <string name="Steden">Stad</string>
    <string name="Provincies">Provincie</string>
    <string name="Landen">Land</string>
    <string name="Wateren">Water</string>
    <string name="Gebergtes">Gebergtes</string>
    <string name="Meerkeuze">Meerkeuze</string>
    <string name="Aanwijs">Aanwijs</string>
    <string name="Invul">Invul</string>
    <string name="Nederland">Nederland</string>
    <string name="Score">score</string>
    <string name="Aantal_vragen">aantal_vragen</string>
    <string name="site_button">Ga naar onze site ></string>
    <string name="info_instellingen">Instellingen</string>
    <string name="info_oefenen">Oefen</string>
    <string name="info_titel">Info</string>
    <string name="settings_titel">Settings</string>
    <string name="settings_geluid">Geluidseffecten</string>
    <string name="settings_opslaan_button">Opslaan</string>
    <string name="settings_kleur">Kleurenblindmodus</string>

    <string-array name="regio_keuzes">
        <item>Nederland</item>
    <!--<item>Europa</item>
        <item>Wereld</item>-->
    </string-array>
    
</resources>
