<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_titel"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:textSize="50sp"
        android:textColor="@android:color/black"
        />

    <GridLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">


    <TextView
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Geluidseffecten"
        android:textSize="20sp"
        android:layout_columnSpan="1"/>


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:scrollbarSize="20dp"
        android:onClick="geluidSwitch"
        android:layout_columnSpan="1"/>

    <TextView
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/settings_kleur"
        android:textSize="20sp"
        android:layout_columnSpan="1"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch2"
        android:scrollbarSize="20dp"
        android:onClick="kleurenSwitch"
        android:layout_columnSpan="1"/>

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_opslaan_button"
        android:id="@+id/button"
        android:onClick="opslaanButton"/>

</LinearLayout>
